# novie_data

./: .gitignore  README.md  pyproject.toml
src/novie_data/: __init__.py  _slice_utils.py  _type_utils.py  arm_coverage_data.py  arm_data.py  cluster_data.py  corrugation_data.py  corrugation_residuals_data.py  errors.py  file_types.py  interface.py  neighbourhood_data.py  perturber_data.py  ridge_data.py  signal_residuals_data.py  snail_data.py  snapshot_data.py  solar_circle_data.py  surface_density_data.py  wrinkle_data.py  wrinkle_residuals_data.py
src/novie_data/serde/: __init__.py  accessors.py  verification.py
test_data/: arm_coverage_v2.hdf5  corrugation_residuals_v2.hdf5  corrugation_v3.hdf5  perturber_v2.hdf5  ridge_v2.hdf5  snail_v4.hdf5  snapshot_v0.hdf5  snapshot_v1.hdf5  solar_circle_v0.hdf5  surface_density_v3.hdf5  wrinkle_residuals_v3.hdf5  wrinkle_v3.hdf5
tests/: __init__.py  test_arm_coverage_data.py  test_corrugation_data.py  test_corrugation_residuals_data.py  test_perturber_data.py  test_ridge_data.py  test_snail_data.py  test_snapshot_data.py  test_solar_circle_data.py  test_surface_density_data.py  test_wrinkle_data.py  test_wrinkle_residuals_data.py
