[project]
name = "novie-data"
version = "2.1.0"
description = "Data type definitions for `novie` files."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["h5py>=3.12.1", "numpy>=1.24.0", "packaging>=24.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
exclude = [".venv"]
venvPath = "."
venv = ".venv"
pythonPlatform = "All"
typeCheckingMode = "strict"
deprecateTypingAliases = true
enableTypeIgnoreComments = false
reportIgnoreCommentWithoutRule = true
reportImplicitRelativeImport = true
reportInvalidCast = true
reportPrivateUsage = true
reportUnnecessaryTypeIgnoreComment = true
reportUnsafeMultipleInheritance = true

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",
    "ANN102",
    "COM812",
    "D203",
    "D213",
    "ISC001",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "S101",
    "TD003",
    "UP040",
]

[tool.uv]
dev-dependencies = [
    "h5py-stubs",
    "pytest>=8.3.3",
    "scipy-stubs",
]

[tool.uv.sources]
scipy-stubs = { git = "https://github.com/jorenham/scipy-stubs.git" }
h5py-stubs = { git = "https://github.com/pavyamsiri/h5py-stubs.git" }
